--- a/index.html
+++ b/index.html
@@ -1,10 +1,51 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Мой Личный Сайт</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<h3>Тест</h3>
+    <header>
+        <h1>Добро пожаловать на мой сайт!</h1>
+        <nav>
+            <ul>
+                <li><a href="#about">Обо мне</a></li>
+                <li><a href="#resume">Резюме</a></li>
+                <li><a href="#contacts">Контакты</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <section id="about">
+        <h2>Обо мне</h2>
+        <p>Здесь вы можете добавить информацию о себе, своих увлечениях и целях.</p>
+    </section>
+
+    <section id="resume">
+        <h2>Резюме</h2>
+        <p>Список ваших проектов и достижений.</p>
+        <ul>
+            <li>Проект 1: Краткое описание</li>
+            <li>Проект 2: Краткое описание</li>
+            <!-- Добавьте больше проектов по мере необходимости -->
+        </ul>
+    </section>
+
+    <section id="contacts">
+        <h2>Контакты</h2>
+        <p>Здесь вы можете указать, как с вами связаться.</p>
+        <ul>
+            <li>Email: ваш.email@example.com</li>
+            <li>LinkedIn: <a href="ваш-профиль">Ваш профиль</a></li>
+            <li>GitHub: <a href="https://github.com/ваш-логин">Ваш GitHub</a></li>
+            <!-- Добавьте другие контакты по мере необходимости -->
+        </ul>
+    </section>
+
+    <footer>
+        <p>&copy; 2024 Ваше Имя</p>
+    </footer>
 </body>
 </html>
