--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="profile">
-            <img src="profile.jpg" alt="Фото профиля">
+            <img src="profile.png" alt="Фото профиля">
             <h1>Максим Алинасович</h1>
         </div>
         <nav>
