--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
         <div class="profile">
             <img src="profile.png" alt="Фото профиля">
-            <h1>Максим Алинасович</h1>
+            <h1>Максим Апанасович</h1>
         </div>
         <nav>
             <a href="#" class="active">Проекты</a>
