--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+<div class="background">
     <header>
         <div class="profile">
             <img src="profile.png" alt="Фото профиля">
@@ -51,5 +52,6 @@
     </div>
 
     <script src="script.js"></script>
+</div>
 </body>
 </html>
