--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 </section>
 <div class="contact-icons">
     <a href="https://t.me/avenyr" target="_blank">
-        <img src="static/img/icon-tg.png" alt="Telegram">
+        <img src="static/img/Icon-tg.jpg" alt="Telegram">
     </a>
     <a href="mailto:apanasovich04@mail.ru">
         <img src="static/img/icon-mail.png" alt="Email">
