--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,16 @@
         </ul>
     </nav>
 </header>
-
+<div class="contact-info">
+    <ul>
+        <li>
+            <a href="https://t.me/avenyr" target="_blank"> Мой Telegram: @avenyr</a>
+        </li>
+        <li>
+            <a href="mailto:apanasovich04@mail.ru">Мой Email: apanasovich04@mail.ru</a>
+        </li>
+    </ul>
+</div>
 <div class="contact-icons">
     <a href="https://t.me/avenyr" target="_blank">
         <img src="{% static 'img/icon-tg.png' %}" alt="Telegram">
