--- a/contact.html
+++ b/contact.html
@@ -28,6 +28,8 @@
             <a href="mailto:apanasovich04@mail.ru">Мой Email: apanasovich04@mail.ru</a>
         </li>
     </ul>
+
+    <p>г. Екатеринбург</p>
 </div>
 <div class="contact-icons">
     <a href="https://t.me/avenyr" target="_blank">
