--- a/portfolio.html
+++ b/portfolio.html
@@ -57,7 +57,7 @@
     </a>
 </div>
 
-<div class="projects" style="display: none;">
+<div class="projects">
     <div class="project" data-title="Портал Новостей (Python, Django, SQL)" data-description="Проект новостного портала, который позволяет публиковать новости и статьи, комментировать их и оценивать." data-image="static/img/PortalPreview.png" data-url="https://github.com/Tasank/PortalNews"></div>
     <div class="project" data-title="Доска объявлений для MMORPG (Python, Django, SQL)" data-description="BulletinBoard - это интернет-ресурс для фанатского сервера MMORPG, который позволяет пользователям создавать и редактировать объявления, оставлять отклики на них..." data-image="static/img/BulletinBoardPreview.png" data-url="https://github.com/Tasank/MMORPG_Site"></div> <-- project2.html -->
     <div class="project" data-title="REST API для отправки данных о перевалах (Python, Django-REST, Flask)" data-description="Этот REST API позволяет отправлять данные о перевалах на сервер. API принимает JSON-данные о перевале и возвращает результат операции в виде JSON-объекта." data-image="static/img/RestApiPreview.png" data-url="https://github.com/Tasank/REST-API-for-sending-data"></div>
