--- a/about.html
+++ b/about.html
@@ -109,12 +109,16 @@
     <div class="about-certificates">
     <h3>Сертификаты:</h3>
     <div class="certificate-row">
-        <a href="static/img/Certificate1.jpg" data-lightbox="certificates">
+        <a href="static/img/Certificate1.png" data-lightbox="certificates">
             <img src="static/img/Certificate1.jpg" alt="Certificate 1">
         </a>
-        <a href="static/img/Certificate2.jpg" data-lightbox="certificates">
+         <a href="static/img/Certificate2.png" data-lightbox="certificates">
+            <img src="static/img/Certificate1.jpg" alt="Certificate 1">
+        </a>
+        <a href="static/img/Certificate3.jpg" data-lightbox="certificates">
             <img src="static/img/Certificate2.jpg" alt="Certificate 2">
         </a>
+
     </div>
 </div>
 </div>
