--- a/about.html
+++ b/about.html
@@ -110,13 +110,13 @@
     <h3>Сертификаты:</h3>
     <div class="certificate-row">
         <a href="static/img/Certificate1.png" data-lightbox="certificates">
-            <img src="static/img/Certificate1.jpg" alt="Certificate 1">
+            <img src="static/img/Certificate1.png" alt="Certificate 1">
         </a>
          <a href="static/img/Certificate2.png" data-lightbox="certificates">
-            <img src="static/img/Certificate1.jpg" alt="Certificate 1">
+            <img src="static/img/Certificate2.png" alt="Certificate 2">
         </a>
         <a href="static/img/Certificate3.jpg" data-lightbox="certificates">
-            <img src="static/img/Certificate2.jpg" alt="Certificate 2">
+            <img src="static/img/Certificate3.jpg" alt="Certificate 3">
         </a>
 
     </div>
